# os-cpp

./: .clang-tidy  .gdbinit  .gitignore  .lldbinit  CMakeLists.txt  Makefile  README.md
doc/: README.md
doc/kernel/: README.md  lock.md  proc.md
doc/libc/: README.md
kernel/: .clang-tidy  CMakeLists.txt  bio  bio.cpp  bio.h  console  console.cpp  console.h  elf  elf.h  file  file.cpp  file.h  fmt  fmt.cpp  fmt.h  fs  fs.cpp  fs.h  kernel.ld  loader  loader.cpp  loader.h  lock  lock.cpp  lock.h  log  log.cpp  log.h  main.cpp  pipe  pipe.cpp  pipe.h  plic  plic.cpp  plic.h  proc  proc.cpp  proc.h  spinlock  (+24 more)
kernel/arch/: riscv  riscv.h
kernel/include/: fs.h
kernel/include/kernel/: fs  scall
kernel/micro_libcxx/: CMakeLists.txt
kernel/micro_libcxx/include/: algorithm  array  cstddef  cstdint  fmt  optional  type_traits  utility
kernel/micro_libcxx/include/__algorithm/: __min.h
kernel/micro_libcxx/include/__utility/: __declval.h  __initializer_list.h  __move__forward.h
kernel/micro_libcxx/src/: fmt.cpp  new.cpp
mkfs/: CMakeLists.txt  mkfs.cpp
ulibc/: CMakeLists.txt
ulibc++/: CMakeLists.txt
ulibc++/include/: __ios_base.h  cstddef  cstdint  cstring  ios  iostream  istream  ostream  streambuf  string  type_traits  utils
ulibc++/src/: cstring.cpp  ios.cpp  ostream.cpp
ulibc/arch/riscv64/: pthread_arch.h  syscall_arch.h
ulibc/crt/: crt1.c
ulibc/include/: ctype.h  dirent.h  features.h  fnctl.h  limits.h  stdio.h  stdlib.h  string.h  unistd.h
ulibc/include/sys/: stat.h  types.h  wait.h
ulibc/src/fcntl/: open.c
ulibc/src/fnctl/: open.c
ulibc/src/include/: pthread_impl.h  stdio_def.h  stdio_impl.h  syscall.h  syscall_ret.h
ulibc/src/internal/: syscall_ret.c
ulibc/src/process/: wait.c
ulibc/src/stat/: fstat.c  mknod.c  stat.c
ulibc/src/stdio/: __overflow.c  __stdio_read.c  __stdio_write.c  __toread.c  __towrite.c  __uflow.c  fgets.c  fputs.c  fwrite.c  gets.c  gets_s.c  printf.c  puts.c  stdin.c  stdout.c  vfprintf.c
ulibc/src/stdlib/: exit.c  malloc_free.c
ulibc/src/string/: memchr.c  memcpy.c  memmove.c  memset.c  strchr.c  strcpy.c  strlen.c
ulibc/src/unistd/: close.c  dup.c  execve.c  fork.c  pipe.c  read.c  sbrk.c  setgid.c  setuid.c  write.c
utils/: CMakeLists.txt  cat.c  init.c  initcode.S  ls.c  sh.c  test.c  test.cpp  user.ld
